refactor(quality): wave-A mechanical smell fixes (~50 issues, 18 rules)
S1118 private ctors, S3358 extract nested ternary, S1066 merge ifs, S108 empty-block comments, S2386 immutable constant, S4144 method delegation, S8491 dangling javadoc, S5411 null-safe Boolean checks, S125 dead-code removal, S1068/S1481/S1854/S1144 unused removals, S1172 unused params, S1488 direct return, S1125 redundant booleans, S6885 Math.clamp, S5838 containsEntry, S5976 parameterized tests, S5778 assertThrows, S6126 text block. 463 tests green; non-behavior-preserving sites skipped (AppConfig CGLIB, prose comments).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>